--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,16 @@ li {
   max-width: 300px;
 }
 
-#exp-info-container {
+#purple-info-container {
   background-color: #4a0ab4;
   font-size: 14px;
   color: #ffffff;
+  padding: 50px 80px;
+}
+
+#white-info-container {
+  font-size: 14px;
+  color: #000000;
   padding: 50px 80px;
 }
 
@@ -73,6 +79,11 @@ li {
   padding: 30px;
 }
 
+#button-container {
+  margin: 50px;
+  text-align: center;
+}
+
 .button {
   border-style: solid;
   border-color: #01a7c2;
@@ -80,7 +91,57 @@ li {
   background: #01a7c2;
   color: #ffffff;
   font-weight: 600;
-  padding: 10px 20px;
+  font-size: 15px;
+  padding: 15px 20px;
+  text-decoration: none;
+}
+
+.button:hover {
+  border-color: #0f7585;
+  background: #0f7585;
+  color: white;
+  transition: 0.5s;
+}
+
+.project-container {
+  text-align: center;
+}
+
+.project-img {
+  max-width: 500px;
+}
+
+.contact-icon {
+  max-width: 30px;
+  margin: 0 20px 0 0;
+}
+
+.contact-links,
+.contact-info {
+  color: #ffffff;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.social-media-container {
+  background-color: #4a0ab4;
+  color: #ffffff;
+  padding: 0 0 15px 0;
+  text-align: center;
+  text-decoration: none;
+}
+
+.footer-line {
+  border-style: solid;
+  border-width: 0.5px;
+  margin: 15px 20px;
+}
+
+.coded-by,
+.media-links {
+  color: #ffff;
+  font-weight: 300;
+  letter-spacing: 1px;
   text-decoration: none;
 }
 
@@ -88,5 +149,9 @@ li {
   .profile-pic-container {
     padding: 60px 0 0 0;
     text-align: center;
+  }
+  #button-container {
+    margin: 60px 0 0 15px;
+    text-align: left;
   }
 }
