--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/*Estilos generales*/
+
 body {
   margin: 0 auto;
   padding: 0;
@@ -26,12 +28,21 @@ li {
   padding: 0;
 }
 
+/*Estilos de la cabecera y menú*/
+
 .nav-links {
   color: black;
   font-size: 18px;
-  padding: 0 100px 0 0;
+  padding: 0 90px 0 0;
   text-decoration: none;
 }
+
+.menu-icon {
+  display: none;
+  max-width: 40px;
+}
+
+/*Estilos de la presentación*/
 
 #intro-container {
   padding: 160px 100px;
@@ -54,6 +65,8 @@ li {
   box-shadow: 20px -20px #d64c4b;
   max-width: 300px;
 }
+
+/*Estilos de los bloques de contenido*/
 
 #purple-info-container {
   background-color: #4a0ab4;
@@ -79,6 +92,17 @@ li {
   padding: 30px;
 }
 
+.project-container {
+  text-align: center;
+}
+
+.project-img {
+  max-width: 500px;
+  margin: 10px;
+}
+
+/*Estilos de los botones*/
+
 #button-container {
   margin: 50px;
   text-align: center;
@@ -103,14 +127,7 @@ li {
   transition: 0.5s;
 }
 
-.project-container {
-  text-align: center;
-}
-
-.project-img {
-  max-width: 500px;
-  margin: 10px;
-}
+/*Estilos de los datos de contacto y pie de página*/
 
 .contact-icon {
   max-width: 30px;
@@ -147,19 +164,93 @@ li {
 }
 
 @media (max-width: 767px) {
+  /* Oculta las opciones del menú en pantallas pequeñas */
+  .nav-links {
+    display: none;
+  }
+
+  /* Muestra el icono de menú en pantallas pequeñas */
+  .nav-links.show {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 70px; /* Ajusta la posición según sea necesario */
+    left: 0;
+    width: 100%;
+    background-color: #333;
+  }
+
+  /* Estilo del icono de menú */
+  .menu-icon {
+    display: block;
+    cursor: pointer;
+  }
+
+  #intro-container {
+    padding: 40px 25px;
+  }
+
+  .intro-description {
+    font-size: 15px;
+  }
+
   .profile-pic-container {
-    padding: 60px 0 0 0;
+    padding: 50px 0 0 0;
     text-align: center;
+  }
+
+  .profile-pic {
+    max-width: 90%;
   }
   #button-container {
     margin: 60px 0 0 15px;
   }
 
-  .profile-pic {
-    max-width: 280px;
-  }
   .project-img {
     margin: 10px;
     max-width: 400px;
+  }
+
+  #purple-info-container {
+    padding: 40px 0;
+  }
+
+  #white-info-container {
+    font-size: 15px;
+    padding: 40px 0;
+  }
+  .section-text {
+    font-size: 15px;
+  }
+  .project-img {
+    max-width: 90%;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+  li {
+    font-size: 15px;
+  }
+
+  .button {
+    font-size: 12px;
+  }
+  .contact-icon {
+    max-width: 25px;
+  }
+
+  .contact-links,
+  .contact-info,
+  .coded-by {
+    font-size: 13px;
+  }
+
+  .contact-info-container {
+    margin: 0 20px;
+  }
+
+  .coded-by {
+    font-size: 12px;
   }
 }
