--- a/css/styles.css
+++ b/css/styles.css
@@ -191,17 +191,19 @@ li {
   }
 
   .intro-description {
+    padding: 20px 0;
     font-size: 15px;
   }
 
   .profile-pic-container {
-    padding: 50px 0 0 0;
+    padding: 30px 0 0 0;
     text-align: center;
   }
 
   .profile-pic {
-    max-width: 90%;
+    max-width: 160px;
   }
+
   #button-container {
     margin: 60px 0 0 15px;
   }
@@ -217,7 +219,7 @@ li {
 
   #white-info-container {
     font-size: 15px;
-    padding: 40px 0;
+    padding: 40px 10px;
   }
   .section-text {
     font-size: 15px;
